src/pins/phase/synan/PinsParser.java
// Generated from synan/PinsParser.g4 by ANTLR 4.8


	package pins.phase.synan;
	
	import java.util.*;
	
	import pins.common.report.*;
	import pins.phase.lexan.*;
  import pins.data.ast.tree.*;
  import pins.data.ast.tree.decl.*;
  import pins.data.ast.tree.type.*;
  import pins.data.ast.tree.expr.*;
	import pins.data.ast.tree.stmt.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PinsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, LINE_COMMENT=2, NESTED_COMMENT=3, CHAR=4, DEL=5, DO=6, ELSE=7, 
		END=8, FUN=9, IF=10, INT=11, NEW=12, THEN=13, TYP=14, VAR=15, VOID=16, 
		WHERE=17, WHILE=18, NONE=19, NULL=20, INTEGER=21, CHARCONST=22, ID=23, 
		LP=24, RP=25, LB=26, RB=27, LBR=28, RBR=29, DOT=30, COMMA=31, COLON=32, 
		SEMICOLON=33, AND=34, OR=35, NEG=36, EQ=37, NEQ=38, LT=39, GT=40, LE=41, 
		GE=42, MUL=43, DIVIDE=44, MOD=45, ADD=46, MINUS=47, CARET=48, ASSIGN=49, 
		ERROR=50;
	public static final int
		RULE_source = 0, RULE_decl = 1, RULE_param = 2, RULE_type = 3, RULE_arr = 4, 
		RULE_atomic = 5, RULE_expr = 6, RULE_statement = 7, RULE_disjunctive = 8, 
		RULE_conjunctive = 9, RULE_relation = 10, RULE_additive = 11, RULE_add_sec = 12, 
		RULE_multiplicative = 13, RULE_prefix = 14, RULE_postfix = 15, RULE_postfix_sec = 16, 
		RULE_variable = 17, RULE_function = 18, RULE_enclosed = 19, RULE_stmt = 20, 
		RULE_expression = 21, RULE_loop = 22, RULE_conditional = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"source", "decl", "param", "type", "arr", "atomic", "expr", "statement", 
			"disjunctive", "conjunctive", "relation", "additive", "add_sec", "multiplicative", 
			"prefix", "postfix", "postfix_sec", "variable", "function", "enclosed", 
			"stmt", "expression", "loop", "conditional"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'char'", "'del'", "'do'", "'else'", "'end'", 
			"'fun'", "'if'", "'int'", "'new'", "'then'", "'typ'", "'var'", "'void'", 
			"'where'", "'while'", "'none'", "'nil'", null, null, null, "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "';'", "'&'", "'|'", 
			"'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'*'", "'/'", "'%'", 
			"'+'", "'-'", "'^'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WHITESPACE", "LINE_COMMENT", "NESTED_COMMENT", "CHAR", "DEL", 
			"DO", "ELSE", "END", "FUN", "IF", "INT", "NEW", "THEN", "TYP", "VAR", 
			"VOID", "WHERE", "WHILE", "NONE", "NULL", "INTEGER", "CHARCONST", "ID", 
			"LP", "RP", "LB", "RB", "LBR", "RBR", "DOT", "COMMA", "COLON", "SEMICOLON", 
			"AND", "OR", "NEG", "EQ", "NEQ", "LT", "GT", "LE", "GE", "MUL", "DIVIDE", 
			"MOD", "ADD", "MINUS", "CARET", "ASSIGN", "ERROR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PinsParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }




	public PinsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class SourceContext extends ParserRuleContext {
		public AstTrees<AstDecl> ast;
		public DeclContext decl;
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_source);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 Vector decls = new Vector(); 
			setState(52); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(49);
				((SourceContext)_localctx).decl = decl();
				 decls.add(((SourceContext)_localctx).decl.ast); 
				}
				}
				setState(54); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << FUN) | (1L << TYP) | (1L << VAR))) != 0) );
			 ((SourceContext)_localctx).ast =  new AstTrees(decls); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public AstDecl ast;
		public Token t;
		public Token ID;
		public TypeContext type;
		public Token s;
		public Token v;
		public Token f;
		public ParamContext param;
		public ExprContext expr;
		public TerminalNode ID() { return getToken(PinsParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(PinsParser.ASSIGN, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode TYP() { return getToken(PinsParser.TYP, 0); }
		public TerminalNode SEMICOLON() { return getToken(PinsParser.SEMICOLON, 0); }
		public TerminalNode COLON() { return getToken(PinsParser.COLON, 0); }
		public TerminalNode VAR() { return getToken(PinsParser.VAR, 0); }
		public TerminalNode LP() { return getToken(PinsParser.LP, 0); }
		public TerminalNode RP() { return getToken(PinsParser.RP, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode FUN() { return getToken(PinsParser.FUN, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PinsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PinsParser.COMMA, i);
		}
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decl);
		int _la;
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYP:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				((DeclContext)_localctx).t = match(TYP);
				setState(59);
				((DeclContext)_localctx).ID = match(ID);
				setState(60);
				match(ASSIGN);
				setState(61);
				((DeclContext)_localctx).type = type();
				setState(62);
				((DeclContext)_localctx).s = match(SEMICOLON);
				 ((DeclContext)_localctx).ast =  new AstTypeDecl(new Location(((DeclContext)_localctx).t.getLine(),((DeclContext)_localctx).t.getCharPositionInLine(),((DeclContext)_localctx).s.getLine(),
				    ((DeclContext)_localctx).s.getCharPositionInLine()+(((DeclContext)_localctx).s!=null?((DeclContext)_localctx).s.getText():null).length() - 1), (((DeclContext)_localctx).ID!=null?((DeclContext)_localctx).ID.getText():null), ((DeclContext)_localctx).type.ast); 
				}
				break;
			case VAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				((DeclContext)_localctx).v = match(VAR);
				setState(66);
				((DeclContext)_localctx).ID = match(ID);
				setState(67);
				match(COLON);
				setState(68);
				((DeclContext)_localctx).type = type();
				setState(69);
				((DeclContext)_localctx).s = match(SEMICOLON);
				 ((DeclContext)_localctx).ast =  new AstVarDecl(new Location(((DeclContext)_localctx).v.getLine(),((DeclContext)_localctx).v.getCharPositionInLine(),((DeclContext)_localctx).s.getLine(),((DeclContext)_localctx).s.getCharPositionInLine()+(((DeclContext)_localctx).s!=null?((DeclContext)_localctx).s.getText():null).length() - 1),
				      (((DeclContext)_localctx).ID!=null?((DeclContext)_localctx).ID.getText():null), ((DeclContext)_localctx).type.ast); 
				}
				break;
			case FUN:
				enterOuterAlt(_localctx, 3);
				{
				 Vector vector = new Vector(); 
				setState(73);
				((DeclContext)_localctx).f = match(FUN);
				setState(74);
				((DeclContext)_localctx).ID = match(ID);
				setState(75);
				match(LP);
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					{
					setState(76);
					((DeclContext)_localctx).param = param();
					 vector.add(((DeclContext)_localctx).param.ast); 
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(79);
						match(COMMA);
						setState(80);
						((DeclContext)_localctx).param = param();
						 vector.add(((DeclContext)_localctx).param.ast); 
						}
						}
						setState(87);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(90);
				match(RP);
				setState(91);
				match(COLON);
				setState(92);
				((DeclContext)_localctx).type = type();
				setState(93);
				match(ASSIGN);
				setState(94);
				((DeclContext)_localctx).expr = expr();
				setState(95);
				((DeclContext)_localctx).s = match(SEMICOLON);
				 AstTrees<AstParDecl> params = new AstTrees(vector); 
				 ((DeclContext)_localctx).ast =  new AstFunDecl(new Location(((DeclContext)_localctx).f.getLine(),((DeclContext)_localctx).f.getCharPositionInLine(),((DeclContext)_localctx).s.getLine(),((DeclContext)_localctx).s.getCharPositionInLine()+(((DeclContext)_localctx).s!=null?((DeclContext)_localctx).s.getText():null).length() - 1), (((DeclContext)_localctx).ID!=null?((DeclContext)_localctx).ID.getText():null),
				      params, ((DeclContext)_localctx).type.ast, ((DeclContext)_localctx).expr.ast); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public AstParDecl ast;
		public Token i;
		public TypeContext j;
		public TerminalNode COLON() { return getToken(PinsParser.COLON, 0); }
		public TerminalNode ID() { return getToken(PinsParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			((ParamContext)_localctx).i = match(ID);
			setState(102);
			match(COLON);
			setState(103);
			((ParamContext)_localctx).j = type();
			 ((ParamContext)_localctx).ast =  new AstParDecl(new Location(((ParamContext)_localctx).i.getLine(), ((ParamContext)_localctx).i.getCharPositionInLine(), ((ParamContext)_localctx).j.ast.location().getEndLine(), ((ParamContext)_localctx).j.ast.location().getEndColumn()), (((ParamContext)_localctx).i!=null?((ParamContext)_localctx).i.getText():null), ((ParamContext)_localctx).j.ast); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public AstType ast;
		public Token i;
		public TypeContext type;
		public ArrContext arr;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode CARET() { return getToken(PinsParser.CARET, 0); }
		public ArrContext arr() {
			return getRuleContext(ArrContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		try {
			setState(113);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CARET:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				((TypeContext)_localctx).i = match(CARET);
				setState(107);
				((TypeContext)_localctx).type = type();
				 ((TypeContext)_localctx).ast =  new AstPtrType(new Location(((TypeContext)_localctx).i.getLine(),((TypeContext)_localctx).i.getCharPositionInLine(),((TypeContext)_localctx).i.getLine(),((TypeContext)_localctx).i.getCharPositionInLine()+(((TypeContext)_localctx).i!=null?((TypeContext)_localctx).i.getText():null).length() - 1), ((TypeContext)_localctx).type.ast );
				}
				break;
			case CHAR:
			case INT:
			case VOID:
			case ID:
			case LP:
			case LB:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				((TypeContext)_localctx).arr = arr();
				 ((TypeContext)_localctx).ast =  ((TypeContext)_localctx).arr.ast; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrContext extends ParserRuleContext {
		public AstType ast;
		public AtomicContext atomic;
		public Token i;
		public ExprContext expr;
		public TypeContext type;
		public AtomicContext atomic() {
			return getRuleContext(AtomicContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RB() { return getToken(PinsParser.RB, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LB() { return getToken(PinsParser.LB, 0); }
		public ArrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arr; }
	}
